# SDLGameExamples

./: CMakeLists.txt  README.MD  configure.bat  configure.sh
example1/: README.MD
example1/src/: example1.cpp
src/: engine.h
src/engine/: engine.cpp
src/example1/: example1.cpp
src/example2/: example2.cpp  ship.cpp  ship.h
src/example3/: example3.cpp
src/sprites/: sprite.cpp  sprite.h
